rerun library_size nb

--- a/notebooks/library_size.ipynb
+++ b/notebooks/library_size.ipynb
@@ -282,7 +282,7 @@
     "        ),\n",
     "        data_mut_escape_overlap=\"fill_to_data\",\n",
     "    )\n",
-    "    poly_abs.fit()\n",
+    "    poly_abs.fit(reg_activity_weight=0)\n",
     "    return poly_abs\n",
     "\n",
     "\n",
@@ -357,13 +357,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-3c8e62781515412988385ff6c89869e0\"></div>\n",
+       "<div id=\"altair-viz-5de69478d38a46c586d190e7196d431e\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3c8e62781515412988385ff6c89869e0\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3c8e62781515412988385ff6c89869e0\");\n",
+       "    if (outputDiv.id !== \"altair-viz-5de69478d38a46c586d190e7196d431e\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-5de69478d38a46c586d190e7196d431e\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -409,7 +409,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"color\": {\"field\": \"epitope\", \"scale\": {\"range\": [\"#1f77b4\", \"#ff7f0e\", \"#2ca02c\"]}, \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"scale\": {\"range\": [\"#1f77b4\", \"#ff7f0e\", \"#2ca02c\"]}, \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"inferred vs. true mutation escape values\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\", \"groupby\": [\"epitope\"]}]}], \"data\": {\"name\": \"data-f909267d39dc8ae87776eccb431afdd6\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-f909267d39dc8ae87776eccb431afdd6\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.004160386828315953, \"num_variants\": \"1000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.23074899561007087, \"num_variants\": \"1000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 5.210780287961313e-05, \"num_variants\": \"1000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.0026171007181160564, \"num_variants\": \"2500\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.4825024560079689, \"num_variants\": \"2500\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.13877610854293096, \"num_variants\": \"2500\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.00044986614810224015, \"num_variants\": \"5000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.582173879243815, \"num_variants\": \"5000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.4091510973303043, \"num_variants\": \"5000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.0678479001502133, \"num_variants\": \"10000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.7602255073934263, \"num_variants\": \"10000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.5025351603948732, \"num_variants\": \"10000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6536110842759627, \"num_variants\": \"20000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9259730738439577, \"num_variants\": \"20000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8526740022714216, \"num_variants\": \"20000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.72307030752994, \"num_variants\": \"30000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9436839654467967, \"num_variants\": \"30000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8932069258207216, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"color\": {\"field\": \"epitope\", \"scale\": {\"range\": [\"#0072B2\", \"#009E73\", \"#CC79A7\"]}, \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"scale\": {\"range\": [\"#0072B2\", \"#009E73\", \"#CC79A7\"]}, \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"inferred vs. true mutation escape values\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\", \"groupby\": [\"epitope\"]}]}], \"data\": {\"name\": \"data-bf48e69c0d2c2a660a07061b602d9482\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-bf48e69c0d2c2a660a07061b602d9482\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.0008294660307494083, \"num_variants\": \"1000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.22458577796573426, \"num_variants\": \"1000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.033627542573853725, \"num_variants\": \"1000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.0024366445285113193, \"num_variants\": \"2500\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.49410541486252973, \"num_variants\": \"2500\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.1184739661152643, \"num_variants\": \"2500\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.0006822831230562307, \"num_variants\": \"5000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.5846819312461189, \"num_variants\": \"5000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.42441551153371876, \"num_variants\": \"5000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.0926721517275088, \"num_variants\": \"10000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.7697756737885773, \"num_variants\": \"10000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.5104060344717413, \"num_variants\": \"10000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6523664467955862, \"num_variants\": \"20000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9240836522973451, \"num_variants\": \"20000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8505211913836953, \"num_variants\": \"20000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7275864191033685, \"num_variants\": \"30000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9440904403823739, \"num_variants\": \"30000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8941596419865168, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -430,7 +430,7 @@
     "        alt.X(\"num_variants:Q\"),\n",
     "        alt.Y(\"correlation (R^2):Q\"),\n",
     "        alt.Color(\n",
-    "            \"epitope:N\", scale=alt.Scale(range=[\"#1f77b4\", \"#ff7f0e\", \"#2ca02c\"])\n",
+    "            \"epitope:N\", scale=alt.Scale(range=['#0072B2', '#009E73', '#CC79A7'])\n",
     "        ),\n",
     "        tooltip=[\n",
     "            \"num_variants\",\n",
@@ -516,13 +516,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-bb4a221c64bc423296094252a12dfb56\"></div>\n",
+       "<div id=\"altair-viz-626c0a2090de4ee7974cd7e79008dffa\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-bb4a221c64bc423296094252a12dfb56\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-bb4a221c64bc423296094252a12dfb56\");\n",
+       "    if (outputDiv.id !== \"altair-viz-626c0a2090de4ee7974cd7e79008dffa\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-626c0a2090de4ee7974cd7e79008dffa\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -568,7 +568,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"predicted vs. true IC90\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\"}]}], \"data\": {\"name\": \"data-84f569d4ae8d8ebd6e99ac55da4cd26a\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-84f569d4ae8d8ebd6e99ac55da4cd26a\": [{\"correlation (R^2)\": 0.7292952755694794, \"num_variants\": \"1000\"}, {\"correlation (R^2)\": 0.834164332683901, \"num_variants\": \"2500\"}, {\"correlation (R^2)\": 0.9085917550213854, \"num_variants\": \"5000\"}, {\"correlation (R^2)\": 0.9247365375831714, \"num_variants\": \"10000\"}, {\"correlation (R^2)\": 0.9857861823337414, \"num_variants\": \"20000\"}, {\"correlation (R^2)\": 0.9926329715737984, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"predicted vs. true IC90\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\"}]}], \"data\": {\"name\": \"data-6401e08adc90150661cabe76c4714d75\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-6401e08adc90150661cabe76c4714d75\": [{\"correlation (R^2)\": 0.7333811735545561, \"num_variants\": \"1000\"}, {\"correlation (R^2)\": 0.8341635051034281, \"num_variants\": \"2500\"}, {\"correlation (R^2)\": 0.9102946019583088, \"num_variants\": \"5000\"}, {\"correlation (R^2)\": 0.9250945831949411, \"num_variants\": \"10000\"}, {\"correlation (R^2)\": 0.9858234536094391, \"num_variants\": \"20000\"}, {\"correlation (R^2)\": 0.9926760401061149, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -627,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
