--- a/notebooks/concentration_set.ipynb
+++ b/notebooks/concentration_set.ipynb
@@ -598,7 +598,7 @@
     "    column=\"epitope:N\",\n",
     "    tooltip=[\"icxx_set:O\", alt.Tooltip(\"correlation (R^2)\", format=\".3f\")],\n",
     "    color=alt.Color(\n",
-    "        \"epitope\", scale=alt.Scale(range=['#0072B2', '#009E73', '#CC79A7']), legend=None\n",
+    "        \"epitope\", scale=alt.Scale(range=[\"#0072B2\", \"#009E73\", \"#CC79A7\"]), legend=None\n",
     "    ),\n",
     ").properties(width=200, height=200, title=\"inferred vs. true mutation escape values\")"
    ]
@@ -956,7 +956,7 @@
     "    y=\"correlation (R^2):Q\",\n",
     "    tooltip=[\"icxx_set\", alt.Tooltip(\"correlation (R^2)\", format=\".3f\")],\n",
     "    color=alt.Color(\n",
-    "        \"epitope\", scale=alt.Scale(range=['#0072B2', '#009E73', '#CC79A7']), legend=None\n",
+    "        \"epitope\", scale=alt.Scale(range=[\"#0072B2\", \"#009E73\", \"#CC79A7\"]), legend=None\n",
     "    ),\n",
     "    row=\"epitope:N\",\n",
     ").properties(\n",
@@ -1058,7 +1058,7 @@
     "        alt.Tooltip(\"correlation (R^2)\", format=\".3f\"),\n",
     "    ],\n",
     "    color=alt.Color(\n",
-    "        \"epitope\", scale=alt.Scale(range=['#0072B2', '#009E73', '#CC79A7']), legend=None\n",
+    "        \"epitope\", scale=alt.Scale(range=[\"#0072B2\", \"#009E73\", \"#CC79A7\"]), legend=None\n",
     "    ),\n",
     ").properties(width=150, height=200, title=\"inferred vs. true mutation escape values\")"
    ]
