--- a/notebooks/library_size.ipynb
+++ b/notebooks/library_size.ipynb
@@ -430,7 +430,7 @@
     "        alt.X(\"num_variants:Q\"),\n",
     "        alt.Y(\"correlation (R^2):Q\"),\n",
     "        alt.Color(\n",
-    "            \"epitope:N\", scale=alt.Scale(range=['#0072B2', '#009E73', '#CC79A7'])\n",
+    "            \"epitope:N\", scale=alt.Scale(range=[\"#0072B2\", \"#009E73\", \"#CC79A7\"])\n",
     "        ),\n",
     "        tooltip=[\n",
     "            \"num_variants\",\n",
