--- a/notebooks/mutation_rate.ipynb
+++ b/notebooks/mutation_rate.ipynb
@@ -450,7 +450,7 @@
     "    column=\"epitope:N\",\n",
     "    tooltip=[\"mutation_rate\", alt.Tooltip(\"correlation (R^2)\", format=\".3f\")],\n",
     "    color=alt.Color(\n",
-    "        \"epitope\", scale=alt.Scale(range=['#0072B2', '#009E73', '#CC79A7']), legend=None\n",
+    "        \"epitope\", scale=alt.Scale(range=[\"#0072B2\", \"#009E73\", \"#CC79A7\"]), legend=None\n",
     "    ),\n",
     ").properties(width=200, height=200, title=\"inferred vs. true mutation escape values\")"
    ]
