--- a/biophysical_model.ipynb
+++ b/biophysical_model.ipynb
@@ -7,6 +7,8 @@
     "# Biophysical model\n",
     "Here we describe the biophysical model of polyclonal antibodies that motivates the approach in this package.\n",
     "\n",
+    "We recommend first reading [this paper](https://www.biorxiv.org/content/10.1101/2022.09.17.508366v1) to understand the model conceptually before reading the rest of the documentation.\n",
+    "\n",
     "## Model\n",
     "\n",
     "Consider a viral protein bound by polyclonal antibodies, such as might be found in sera.\n",
