--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -18,13 +18,6 @@
    "execution_count": 1,
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-31T20:05:29.252123Z",
-     "iopub.status.busy": "2021-12-31T20:05:29.251757Z",
-     "iopub.status.idle": "2021-12-31T20:05:31.395537Z",
-     "shell.execute_reply": "2021-12-31T20:05:31.394451Z",
-     "shell.execute_reply.started": "2021-12-31T20:05:29.252037Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -131,13 +124,6 @@
    "execution_count": 2,
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-31T20:05:31.399056Z",
-     "iopub.status.busy": "2021-12-31T20:05:31.398897Z",
-     "iopub.status.idle": "2021-12-31T20:05:31.428300Z",
-     "shell.execute_reply": "2021-12-31T20:05:31.427616Z",
-     "shell.execute_reply.started": "2021-12-31T20:05:31.399034Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -211,13 +197,6 @@
    "execution_count": 3,
    "id": "4cd10913-d096-457f-9dff-af8385c7ddeb",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-31T20:05:31.432591Z",
-     "iopub.status.busy": "2021-12-31T20:05:31.432338Z",
-     "iopub.status.idle": "2021-12-31T20:05:31.532946Z",
-     "shell.execute_reply": "2021-12-31T20:05:31.532285Z",
-     "shell.execute_reply.started": "2021-12-31T20:05:31.432568Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -282,13 +261,6 @@
    "execution_count": 4,
    "id": "e6c5bbed-2dde-44bf-9375-ee4b31d673cc",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-31T20:05:31.536080Z",
-     "iopub.status.busy": "2021-12-31T20:05:31.535856Z",
-     "iopub.status.idle": "2021-12-31T20:05:31.544610Z",
-     "shell.execute_reply": "2021-12-31T20:05:31.544011Z",
-     "shell.execute_reply.started": "2021-12-31T20:05:31.536060Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -355,13 +327,6 @@
    "execution_count": 5,
    "id": "89650449-2a91-437a-956f-661a4ece7573",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-31T20:05:31.547370Z",
-     "iopub.status.busy": "2021-12-31T20:05:31.547221Z",
-     "iopub.status.idle": "2021-12-31T20:05:31.562005Z",
-     "shell.execute_reply": "2021-12-31T20:05:31.561382Z",
-     "shell.execute_reply.started": "2021-12-31T20:05:31.547349Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -417,6 +382,171 @@
     "\n",
     "    print(\"All gradients check\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed5a0e96-46b7-4720-a2bb-dc5f045ca10e",
+   "metadata": {},
+   "source": [
+    "## Gradient of epitope similarity regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3eac6c6b-2d69-4625-906a-03c3ee90a0a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model: same variants all concentration, not fit\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 1.9999999999999997e-08\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 2.4e-07\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 2.4e-07\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 2.4e-07\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 1.9999999999999997e-08\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 2.4e-07\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 2.4e-07\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 2.4e-07\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.3123307124042185\n",
+      "analytical_grad: 0.3123307469825384\n",
+      "numerical_grad: -0.819132850438109\n",
+      "analytical_grad: -0.8191329344912459\n",
+      "numerical_grad: 0.6550315845288424\n",
+      "analytical_grad: 0.6550315319837298\n",
+      "numerical_grad: -2.1953655959805474\n",
+      "analytical_grad: -2.1953658083288556\n",
+      "numerical_grad: -25.087864941042426\n",
+      "analytical_grad: -25.08786563393625\n",
+      "numerical_grad: 16.346979663239836\n",
+      "analytical_grad: 16.346979486301283\n",
+      "numerical_grad: -29.40878289336979\n",
+      "analytical_grad: -29.408783545288383\n",
+      "numerical_grad: 12.02031455704855\n",
+      "analytical_grad: 12.020314353689729\n",
+      "numerical_grad: -22.051857797578123\n",
+      "analytical_grad: -22.05185841004314\n",
+      "numerical_grad: 19.66277594078747\n",
+      "analytical_grad: 19.662775638369848\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.0\n",
+      "analytical_grad: 0.0\n",
+      "numerical_grad: 0.2947875543668488\n",
+      "analytical_grad: 0.29478756985259524\n",
+      "numerical_grad: -0.749815427525391\n",
+      "analytical_grad: -0.7498153770675449\n",
+      "numerical_grad: 0.6318427381302172\n",
+      "analytical_grad: 0.6318428318375369\n",
+      "numerical_grad: -2.083176724454461\n",
+      "analytical_grad: -2.0831768219972093\n",
+      "numerical_grad: -23.132743649512122\n",
+      "analytical_grad: -23.132744270947033\n",
+      "numerical_grad: 15.390908458812191\n",
+      "analytical_grad: 15.390908368809948\n",
+      "numerical_grad: -27.280650840566523\n",
+      "analytical_grad: -27.280651383851342\n",
+      "numerical_grad: 11.324659965339379\n",
+      "analytical_grad: 11.324659793685736\n",
+      "numerical_grad: -20.089997434524776\n",
+      "analytical_grad: -20.08999808829753\n",
+      "numerical_grad: 17.4491536597543\n",
+      "analytical_grad: 17.44915351472274\n",
+      "All gradients check\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-7\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "\n",
+    "    print(f\"\\nModel: {name}\")\n",
+    "\n",
+    "    # analytical\n",
+    "    reg, dreg = model._reg_similarity(\n",
+    "        params=model._params,\n",
+    "        weight=0.2,\n",
+    "    )\n",
+    "\n",
+    "    # numerical, compare to analytical\n",
+    "    for iparam in range(len(model._params)):\n",
+    "        eps_vec = numpy.zeros(len(model._params))\n",
+    "        eps_vec[iparam] = eps\n",
+    "        reg_eps, _ = model._reg_similarity(\n",
+    "            params=model._params + eps_vec,\n",
+    "            weight=0.2,\n",
+    "        )\n",
+    "        numerical_grad = (reg_eps - reg) / eps\n",
+    "        print(f\"numerical_grad: {numerical_grad}\")\n",
+    "        analytical_grad = dreg[iparam]\n",
+    "        print(f\"analytical_grad: {analytical_grad}\")\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
+    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        if (diff > 1e-6) or (mag > 0 and diff / mag > 1e-3):\n",
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
+    "            )\n",
+    "\n",
+    "    print(\"All gradients check\")"
+   ]
   }
  ],
  "metadata": {
@@ -435,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
