--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -62,6 +62,11 @@
     "$$R_{\\rm{spread}} = \\lambda_{\\rm{spread}} \\sum_{e,i} \\frac{1}{M_i}\\sum_{m \\in i}\\left(\\beta_{m,e} - \\frac{1}{M_i} \\sum_{m' \\in i} \\beta_{m',e}\\right)^2$$\n",
     "where $i$ ranges over all sites, $M_i$ is the number of mutations at site $i$, and $m \\in i$ indicates all mutations at site $i$.\n",
     "\n",
+    "### Regularization of similarity of escape values at each site across epitopes\n",
+    "We regularize the similarity of escape values $\\beta_{m,e}$ at each site across epitopes, so that\n",
+    "$$ R_{\\rm{similarity}} = \\lambda_{\\rm{similarity}} \\sum_{i} \\sum_{j > i} \\sum_{k} \\left(\\sum_{m \\in S_{k,i}} \\beta_{m,i}^2\\right)\\left(\\sum_{m \\in S_{k,j}} \\beta_{m,j}^2\\right)$$\n",
+    "where $i$, $j$ range over all epitopes $E$, $k$ is the site index, and $m \\in S_{k}$ represents all mutations at site $k$. \n",
+    "\n",
     "### Regularization of epitope activities\n",
     "We regularize the epitope activities $a_{\\rm{wt}, e}$ the wildtype activities so that the regularization is 0 when the activity is negative and a Pseudo-Huber function when the activity is positive, so that\n",
     "$$R_{\\rm{activity}} = \\lambda_{\\rm{activity}} \\sum_e \\begin{cases} 0 & \\rm{if \\;} a_{\\rm{wt}, e} < 0 \\\\ h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) & \\rm{if \\;} a_{\\rm{wt}, e} \\ge 0\\end{cases} $$\n",
@@ -177,12 +182,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "160d1b13-c2a8-41ea-bce3-3485a4c7f3a5",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{similarity}}}{\\partial \\beta_{m,e}}$\n",
+    "$$ \\frac{\\partial R_{\\rm{similarity}}}{\\partial \\beta_{m,e}} = \\lambda_{\\rm{similarity}} \\sum_{i} \\sum_{j > i} \\sum_{k} \\begin{cases} 2\\beta_{m,i} \\sum_{m \\in S_{k,j}} \\left(\\beta_{m,j}^2 \\right) & \\rm{if \\;} i = e \\\\ 2\\beta_{m,j} \\sum_{m \\in S_{k,i}} \\left(\\beta_{m,i}^2 \\right) & \\rm{if \\;} j = e \\\\ 0 & \\rm{otherwise} \\end{cases}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4faa44e7-c8e6-4016-8ffc-cacd523da8c0",
    "metadata": {},
    "source": [
     "#### Calculating $\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}}$\n",
     "\n",
-    "$$\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}} = \\begin{cases} 0 & \\rm{if \\;} a_{\\rm{wt}, e} < 0 \\\\ \\frac{\\lambda_{\\rm{escape}}a_{\\rm{wt}, e}}{h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) + \\delta_{\\rm{activity}}} & \\rm{if \\;} a_{\\rm{wt}, e} \\ge 0 \\end{cases}$$"
+    "$$\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}} = \\begin{cases} 0 & \\rm{if \\;} a_{\\rm{wt}, e} < 0 \\\\ \n",
+    "\\frac{\\lambda_{\\rm{escape}}a_{\\rm{wt}, e}}{h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) + \\delta_{\\rm{activity}}} & \\rm{if \\;} a_{\\rm{wt}, e} \\ge 0 \\end{cases}$$"
    ]
   },
   {
@@ -197,14 +212,6 @@
     "Finally, the fit parameters or predictions from the models are summarized.\n",
     "Note that mutations may not be present in some bootstrap replicates if they are only in a few variants, and this can be assessed by looking at the `frac_boostrap_replicates` column in the output from `PolyclonalBootstrap`."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11a6eb63-32fa-4e49-8faf-7b103c24e9ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -223,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
