ignore nbval output

--- a/notebooks/real_mAb_cocktail.ipynb
+++ b/notebooks/real_mAb_cocktail.ipynb
@@ -360,13 +360,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-2d815dd63233406b9201d097c7fb3b0b\"></div>\n",
+       "<div id=\"altair-viz-5ada4cf762a94d1995effa13a945d507\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-2d815dd63233406b9201d097c7fb3b0b\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-2d815dd63233406b9201d097c7fb3b0b\");\n",
+       "    if (outputDiv.id !== \"altair-viz-5ada4cf762a94d1995effa13a945d507\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-5ada4cf762a94d1995effa13a945d507\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -425,6 +425,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "max_aa_subs = 4  # group if >= this many substitutions\n",
     "\n",
     "mean_prob_escape = (\n",
@@ -492,16 +493,16 @@
      "output_type": "stream",
      "text": [
       "# First fitting site-level model.\n",
-      "# Starting optimization of 1026 parameters at Wed Oct  5 21:15:22 2022.\n",
+      "# Starting optimization of 1026 parameters at Wed Oct  5 21:51:52 2022.\n",
       "         step     time_sec         loss     fit_loss   reg_escape   reg_spreadreg_similarity reg_activity\n",
-      "            0     0.047821       264.24       263.33            0            0            0      0.90499\n",
-      "           56        1.881       125.73       121.52       2.9785            0            0       1.2287\n",
-      "# Successfully finished at Wed Oct  5 21:15:24 2022.\n",
-      "# Starting optimization of 6736 parameters at Wed Oct  5 21:15:24 2022.\n",
+      "            0     0.037133       264.24       263.33            0            0            0      0.90499\n",
+      "           56        1.963       125.73       121.52       2.9785            0            0       1.2287\n",
+      "# Successfully finished at Wed Oct  5 21:51:54 2022.\n",
+      "# Starting optimization of 6736 parameters at Wed Oct  5 21:51:54 2022.\n",
       "         step     time_sec         loss     fit_loss   reg_escape   reg_spreadreg_similarity reg_activity\n",
-      "            0     0.040648        186.2       157.37       27.606    7.364e-32            0       1.2287\n",
-      "           70       3.2254       164.39       152.36       10.271      0.33911            0       1.4259\n",
-      "# Successfully finished at Wed Oct  5 21:15:27 2022.\n"
+      "            0     0.036123        186.2       157.37       27.606    7.364e-32            0       1.2287\n",
+      "           70        2.994       164.39       152.36       10.271      0.33911            0       1.4259\n",
+      "# Successfully finished at Wed Oct  5 21:51:57 2022.\n"
      ]
     },
     {
@@ -516,13 +517,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-8256ef6fcf5b4c9483bb2ff01cba6304\"></div>\n",
+       "<div id=\"altair-viz-b6c01a8f2ff847408197b90b9b8d3d8c\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-8256ef6fcf5b4c9483bb2ff01cba6304\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-8256ef6fcf5b4c9483bb2ff01cba6304\");\n",
+       "    if (outputDiv.id !== \"altair-viz-b6c01a8f2ff847408197b90b9b8d3d8c\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-b6c01a8f2ff847408197b90b9b8d3d8c\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -581,6 +582,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "model = polyclonal.Polyclonal(\n",
     "    n_epitopes=2,\n",
     "    data_to_fit=prob_escape.rename(\n",
@@ -617,16 +619,16 @@
      "output_type": "stream",
      "text": [
       "# First fitting site-level model.\n",
-      "# Starting optimization of 1026 parameters at Wed Oct  5 21:15:30 2022.\n",
+      "# Starting optimization of 1026 parameters at Wed Oct  5 21:52:00 2022.\n",
       "         step     time_sec         loss     fit_loss   reg_escape   reg_spreadreg_similarity reg_activity\n",
-      "            0     0.054325       264.24       263.33            0            0            0      0.90499\n",
-      "          176        11.04       125.87       121.59        2.976            0      0.07241       1.2303\n",
-      "# Successfully finished at Wed Oct  5 21:15:41 2022.\n",
-      "# Starting optimization of 6736 parameters at Wed Oct  5 21:15:41 2022.\n",
+      "            0     0.057774       264.24       263.33            0            0            0      0.90499\n",
+      "          176       10.695       125.87       121.59        2.976            0      0.07241       1.2303\n",
+      "# Successfully finished at Wed Oct  5 21:52:11 2022.\n",
+      "# Starting optimization of 6736 parameters at Wed Oct  5 21:52:11 2022.\n",
       "         step     time_sec         loss     fit_loss   reg_escape   reg_spreadreg_similarity reg_activity\n",
-      "            0     0.076031       194.95       157.43       27.864    4.058e-32       8.4319       1.2303\n",
-      "           82       5.6456       165.55       153.83       9.4986       0.3869      0.39707       1.4354\n",
-      "# Successfully finished at Wed Oct  5 21:15:47 2022.\n"
+      "            0     0.064654       194.95       157.43       27.864    4.058e-32       8.4319       1.2303\n",
+      "           82       5.7599       165.55       153.83       9.4986       0.3869      0.39707       1.4354\n",
+      "# Successfully finished at Wed Oct  5 21:52:16 2022.\n"
      ]
     },
     {
@@ -641,13 +643,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-70d9f07e06f142ddbac592c32967cbdf\"></div>\n",
+       "<div id=\"altair-viz-ade6de68b09a485caaad9879172c0c16\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-70d9f07e06f142ddbac592c32967cbdf\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-70d9f07e06f142ddbac592c32967cbdf\");\n",
+       "    if (outputDiv.id !== \"altair-viz-ade6de68b09a485caaad9879172c0c16\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-ade6de68b09a485caaad9879172c0c16\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -706,6 +708,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "model = polyclonal.Polyclonal(\n",
     "    n_epitopes=2,\n",
     "    data_to_fit=prob_escape.rename(\n",
