--- a/notebooks/real_mAb_cocktail.ipynb
+++ b/notebooks/real_mAb_cocktail.ipynb
@@ -236,10 +236,10 @@
    ],
    "source": [
     "prob_escape = pd.read_csv(\n",
-    "    \"libA_220810_1_1C04-5G04_1_prob_escape.csv\", \n",
-    "    keep_default_na=False, \n",
-    "    na_values=\"nan\"\n",
-    ").query(\"`no-antibody_count` >= no_antibody_count_threshold\") # filter for those with sufficient no-antibody counts\n",
+    "    \"libA_220810_1_1C04-5G04_1_prob_escape.csv\", keep_default_na=False, na_values=\"nan\"\n",
+    ").query(\n",
+    "    \"`no-antibody_count` >= no_antibody_count_threshold\"\n",
+    ")  # filter for those with sufficient no-antibody counts\n",
     "assert prob_escape.notnull().all().all()\n",
     "prob_escape.head()"
    ]
@@ -590,16 +590,16 @@
     "            \"antibody_concentration\": \"concentration\",\n",
     "            \"aa_substitutions_sequential\": \"aa_substitutions\",\n",
     "        }\n",
-    "    ).query('concentration > 1.0'),\n",
+    "    ).query(\"concentration > 1.0\"),\n",
     "    alphabet=polyclonal.AAS_WITHSTOP_WITHGAP,\n",
     ")\n",
     "\n",
-    " # fit model\n",
+    "# fit model\n",
     "opt_res = model.fit(\n",
-    "    logfreq=200, \n",
+    "    logfreq=200,\n",
     "    reg_escape_weight=0.1,\n",
     ")\n",
-    "model.mut_escape_plot(category_colors={'1': '#0072B2', '2': '#CC79A7'})"
+    "model.mut_escape_plot(category_colors={\"1\": \"#0072B2\", \"2\": \"#CC79A7\"})"
    ]
   },
   {
@@ -716,17 +716,17 @@
     "            \"antibody_concentration\": \"concentration\",\n",
     "            \"aa_substitutions_sequential\": \"aa_substitutions\",\n",
     "        }\n",
-    "    ).query('concentration > 1.0'),\n",
+    "    ).query(\"concentration > 1.0\"),\n",
     "    alphabet=polyclonal.AAS_WITHSTOP_WITHGAP,\n",
     ")\n",
     "\n",
-    " # fit model\n",
+    "# fit model\n",
     "opt_res = model.fit(\n",
-    "    logfreq=200, \n",
+    "    logfreq=200,\n",
     "    reg_escape_weight=0.1,\n",
-    "    reg_similarity_weight=1.0, # regularize epitope similarity\n",
+    "    reg_similarity_weight=1.0,  # regularize epitope similarity\n",
     ")\n",
-    "model.mut_escape_plot(category_colors={'1': '#0072B2', '2': '#CC79A7'})"
+    "model.mut_escape_plot(category_colors={\"1\": \"#0072B2\", \"2\": \"#CC79A7\"})"
    ]
   },
   {
