--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -64,8 +64,8 @@
     "\n",
     "### Regularization of similarity of escape values at each site across epitopes\n",
     "We regularize the similarity of escape values $\\beta_{m,e}$ at each site across epitopes, so that\n",
-    "$$ R_{\\rm{similarity}} = \\lambda_{\\rm{similarity}} \\sum_{i} \\sum_{j > i} \\sum_{k} \\left(\\sum_{m \\in S_{k,i}} \\beta_{m,i}^2\\right)\\left(\\sum_{m \\in S_{k,j}} \\beta_{m,j}^2\\right)$$\n",
-    "where $i$, $j$ range over all epitopes $E$, $k$ is the site index, and $m \\in S_{k}$ represents all mutations at site $k$. \n",
+    "$$ R_{\\rm{similarity}} = \\lambda_{\\rm{similarity}} \\sum_{i} \\sum_{j > i} \\sum_{k} \\left(\\sum_{m' \\in S_{k}} \\beta_{m',i}^2\\right)\\left(\\sum_{m' \\in S_{k}} \\beta_{m',j}^2\\right)$$\n",
+    "where $i$, $j$ range over all epitopes $E$, $k$ is the site index, and $m' \\in S_{k}$ represents all mutations at site $k$. \n",
     "\n",
     "### Regularization of epitope activities\n",
     "We regularize the epitope activities $a_{\\rm{wt}, e}$ the wildtype activities so that the regularization is 0 when the activity is negative and a Pseudo-Huber function when the activity is positive, so that\n",
@@ -186,7 +186,7 @@
    "metadata": {},
    "source": [
     "#### Calculating $\\frac{\\partial R_{\\rm{similarity}}}{\\partial \\beta_{m,e}}$\n",
-    "$$ \\frac{\\partial R_{\\rm{similarity}}}{\\partial \\beta_{m,e}} = \\lambda_{\\rm{similarity}} \\sum_{i} \\sum_{j > i} \\sum_{k} \\begin{cases} 2\\beta_{m,i} \\sum_{m \\in S_{k,j}} \\left(\\beta_{m,j}^2 \\right) & \\rm{if \\;} i = e \\\\ 2\\beta_{m,j} \\sum_{m \\in S_{k,i}} \\left(\\beta_{m,i}^2 \\right) & \\rm{if \\;} j = e \\\\ 0 & \\rm{otherwise} \\end{cases}$$"
+    "$$ \\frac{\\partial{R_{\\rm{similarity}}}}{\\partial{\\beta_{m,e}}} = 2\\lambda_{\\rm{similarity}} \\beta_{m,e} \\sum_{j \\neq e} \\sum_{m' \\in S_k}\\left(\\beta_{m',j}^2\\right)$$"
    ]
   },
   {
