update optimization docs

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -8,11 +8,7 @@
     "# Details on fitting\n",
     "Here we describe how the `polyclonal` package actually fits the models.\n",
     "\n",
-    "The basic idea is to minimize the difference between the predicted and measured variant-level escape probabilities, $p_v\\left(c\\right)$, using a loss function that is not overly sensitive to outliers.\n",
-    "In addition, by default there is regularization:\n",
-    "\n",
-    " 1. The mutation escape values $\\beta_{m,e}$ to capture the idea that most mutations should not mediate escape at most sites.\n",
-    " 2. The spread on mutation escape values at each site to capture the idea that different mutations at the same site should have similar-ish effects on escape.\n",
+    "The basic idea is to minimize the difference between the predicted and measured variant-level escape probabilities, $p_v\\left(c\\right)$, using a loss function that is not overly sensitive to outliers. In addition, there is regularization to encourage parameters to behave under biologically motivated constraints. \n",
     "\n",
     "## Implementation\n",
     "The fitting is implemented in the `Polyclonal.fit` function, which allows adjustment of the weights for the regularization.\n",
@@ -50,7 +46,8 @@
     "\n",
     " 1. Most mutations should not mediate escape,\n",
     " 2. When a site is involved in escape for a given epitope, most mutations at a site will have similar-ish effects.\n",
-    " 3. Epitope activities should be small (or negative) except when clear evidence to the contrary.\n",
+    " 3. A site involved in escape should only mediate escape from a single epitope.\n",
+    " 4. Epitope activities should be small (or negative) except when clear evidence to the contrary.\n",
     "\n",
     "### Regularization of escape values \n",
     "We regularize the escape values $\\beta_{m,e}$ using a simple Pseudo-Huber function, so that\n",
