--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -413,8 +413,13 @@
    "source": [
     "eps = 1e-7\n",
     "\n",
-    "for name, model in {k: models[k] for k in ('same variants all concentration, fit', \n",
-    "                                           'different variants among concentrations, fit')}.items():\n",
+    "for name, model in {\n",
+    "    k: models[k]\n",
+    "    for k in (\n",
+    "        \"same variants all concentration, fit\",\n",
+    "        \"different variants among concentrations, fit\",\n",
+    "    )\n",
+    "}.items():\n",
     "\n",
     "    print(f\"\\nModel: {name}\")\n",
     "\n",
