--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -402,6 +402,12 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "Model: same variants all concentration, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
       "Model: same variants all concentration, fit\n",
       "All gradients check\n",
       "\n",
@@ -413,13 +419,7 @@
    "source": [
     "eps = 1e-7\n",
     "\n",
-    "for name, model in {\n",
-    "    k: models[k]\n",
-    "    for k in (\n",
-    "        \"same variants all concentration, fit\",\n",
-    "        \"different variants among concentrations, fit\",\n",
-    "    )\n",
-    "}.items():\n",
+    "for name, model in models.items():\n",
     "\n",
     "    print(f\"\\nModel: {name}\")\n",
     "\n",
@@ -427,6 +427,7 @@
     "    reg, dreg = model._reg_similarity(\n",
     "        params=model._params,\n",
     "        weight=0.2,\n",
+    "        epsilon=1e-2\n",
     "    )\n",
     "\n",
     "    # numerical, compare to analytical\n",
@@ -436,12 +437,13 @@
     "        reg_eps, _ = model._reg_similarity(\n",
     "            params=model._params + eps_vec,\n",
     "            weight=0.2,\n",
+    "            epsilon=1e-2\n",
     "        )\n",
     "        numerical_grad = (reg_eps - reg) / eps\n",
     "        analytical_grad = dreg[iparam]\n",
     "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
     "        mag = numpy.sqrt(analytical_grad**2)\n",
-    "        if (diff > 1e-7) or (mag > 0 and diff / mag > 1e-3):\n",
+    "        if (diff > 1e-6) or (mag > 0 and diff / mag > 1e-3):\n",
     "            raise ValueError(\n",
     "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
     "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
