--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -424,20 +424,14 @@
     "    print(f\"\\nModel: {name}\")\n",
     "\n",
     "    # analytical\n",
-    "    reg, dreg = model._reg_similarity(\n",
-    "        params=model._params,\n",
-    "        weight=0.2,\n",
-    "        epsilon=1e-2\n",
-    "    )\n",
+    "    reg, dreg = model._reg_similarity(params=model._params, weight=0.2, epsilon=1e-2)\n",
     "\n",
     "    # numerical, compare to analytical\n",
     "    for iparam in range(len(model._params)):\n",
     "        eps_vec = numpy.zeros(len(model._params))\n",
     "        eps_vec[iparam] = eps\n",
     "        reg_eps, _ = model._reg_similarity(\n",
-    "            params=model._params + eps_vec,\n",
-    "            weight=0.2,\n",
-    "            epsilon=1e-2\n",
+    "            params=model._params + eps_vec, weight=0.2, epsilon=1e-2\n",
     "        )\n",
     "        numerical_grad = (reg_eps - reg) / eps\n",
     "        analytical_grad = dreg[iparam]\n",
